Cycles bake normal map #46313

Closed
opened 2015-09-29 09:08:58 +02:00 by nick wolfert · 8 comments

CPU: AMD Phenom II X6 1055T 2.8GHz
RAM: 16 GB ddr3
Graphics: NVIDIA GTX 570
OS: Windows 7 64bit

Blender Version
Broken: 2.76rc2 #e24ea81, buildbot 2.76 #1a6d455
Worked: 2.75a #c27589e

Short description of error
cycles bakes incorrectly on two faces of the cube when baking from selected to active

low poly and high poly
lp_hp.jpg

2.75 works
view_275.jpg
normal_map_275.png
2.76 broken
view_276rc2.jpg
normal_map_276rc2.png

Exact steps for others to reproduce the error
open the attached .blend and bake then switch to blender render to view.normal_test_5_001.blend

CPU: AMD Phenom II X6 1055T 2.8GHz RAM: 16 GB ddr3 Graphics: NVIDIA GTX 570 OS: Windows 7 64bit **Blender Version** Broken: 2.76rc2 #e24ea81, buildbot 2.76 #1a6d455 Worked: 2.75a #c27589e **Short description of error** cycles bakes incorrectly on two faces of the cube when baking from selected to active low poly and high poly ![lp_hp.jpg](https://archive.blender.org/developer/F240792/lp_hp.jpg) 2.75 works ![view_275.jpg](https://archive.blender.org/developer/F240783/view_275.jpg) ![normal_map_275.png](https://archive.blender.org/developer/F240786/normal_map_275.png) 2.76 broken ![view_276rc2.jpg](https://archive.blender.org/developer/F240784/view_276rc2.jpg) ![normal_map_276rc2.png](https://archive.blender.org/developer/F240787/normal_map_276rc2.png) **Exact steps for others to reproduce the error** open the attached .blend and bake then switch to blender render to view.[normal_test_5_001.blend](https://archive.blender.org/developer/F240785/normal_test_5_001.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Nick_w

Added subscriber: @Nick_w

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2015-09-29 09:35:31 +02:00

Added subscribers: @Psy-Fi, @ideasman42

Added subscribers: @Psy-Fi, @ideasman42

Developer note. This in fact seems to be actually caused by the looptri changes. At leats those changes makes troubleshooting the issue a way harder. So wouldn't mind having some extra help here.

Developer note. This in fact seems to be actually caused by the looptri changes. At leats those changes makes troubleshooting the issue a way harder. So wouldn't mind having some extra help here.

Another developer note:
The baking issue is indeed caused by 2ec00ea. In order to reproduce the issue with that exact revision c61e4f2 is to be reverted and e1cea53 is to be backported.

Another developer note: The baking issue is indeed caused by 2ec00ea. In order to reproduce the issue with that exact revision c61e4f2 is to be reverted and e1cea53 is to be backported.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by de360c4090

This issue was referenced by de360c4090fc744e73b3fb6950bafd10a2d28712
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46313
No description provided.