Fix T46313: Cycles bake normal map

Regression moving to bake to looptri
caused by mismatch w/ MFace and MLoopTri when the 3rd index was 0.